@@ -40,10 +40,10 @@
 #else
 # define TIEMU_VERSION VERSION
 #endif
-#define TIEMU_REQUIRES_LIBCABLES_VERSION	"0.0.1"
-#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"0.2.2"
-#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.2.0"
-#define TIEMU_REQUIRES_LIBCONV_VERSION		"0.0.1"
+#define TIEMU_REQUIRES_LIBCABLES_VERSION	"1.0.0"
+#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"1.0.0"
+#define TIEMU_REQUIRES_LIBFILES_VERSION		"1.0.3"
+#define TIEMU_REQUIRES_LIBCONV_VERSION		"1.0.0"
 
 #endif
 
