@@ -1,7 +1,9 @@
 SubVersion: $Id$
 
 - 11/12/2006, version 2.81d
-	- store *.sav files in the images folder rather than polluting the application top folder
+	- [roms]  $2321: store *.sav files in the images folder rather than polluting the application top folder
+	- [roms]  $2322: updated to use API changes of tifiles2 v1.0.3 
+
 
 - 07/08/2006, version 2.81c
 	- [kevin] $2202: fixed g_free of invalid pointers in state.c (#1471709)
